fixed bug: side visible on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,6 +52,7 @@
                     img {
                         width: 100%;
                         height: 100%;
+                        padding: 2px;
                     }
                 }
             }
@@ -67,7 +68,7 @@
     }
 
     @media (max-width:800px) {
-        .side {
+        .content-max-width .side {
             display: none;
         }
 
